# DicomReader

./: CMakeLists.txt  DicomReader.cpp  README.md  VTKWriter.h
DICOMParser/src/: DICOMAppHelper.cxx
